{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 28,
  "lineage": "87e2830e-aea5-82aa-6a3e-f75f73863942",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "state_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06cab0c77784902e7",
            "arn": "arn:aws:ec2:us-east-1:957842195675:elastic-ip/eipalloc-06cab0c77784902e7",
            "association_id": "eipassoc-0d5dc3c16be1b274c",
            "domain": "vpc",
            "id": "eipalloc-06cab0c77784902e7",
            "instance": "i-00d78ad14489bf8ad",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07dc717507beecadf",
            "private_dns": "ip-10-0-1-60.ec2.internal",
            "private_ip": "10.0.1.60",
            "public_dns": "ec2-52-201-96-185.compute-1.amazonaws.com",
            "public_ip": "52.201.96.185",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-infra-state-eip"
            },
            "tags_all": {
              "Name": "dermatech-infra-state-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:957842195675:instance/i-00b5ea9a4b6ba4fcf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b5ea9a4b6ba4fcf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d5b942fe09a1ec1b"
              }
            ],
            "primary_network_interface_id": "eni-0d5b942fe09a1ec1b",
            "private_dns": "ip-10-0-1-60.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.60",
            "public_dns": "ec2-98-86-231-157.compute-1.amazonaws.com",
            "public_ip": "98.86.231.157",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03efaaff0f1766420",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a89fe56aa0e961c",
            "tags": {
              "Name": "dermatech-infra-state-server"
            },
            "tags_all": {
              "Name": "dermatech-infra-state-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-05bc2763c892979c0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "957842195675",
            "id": "i-00b5ea9a4b6ba4fcf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.aws_security_group.state_sg",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957842195675:security-group/sg-05bc2763c892979c0",
            "description": "Security Group for State \u0026 Monitoring (Whitelisted)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bc2763c892979c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "100.52.22.97/32"
                ],
                "description": "Admin Access (SSH/Web) from QA Gateway",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "100.52.22.97/32"
                ],
                "description": "Grafana UI from QA Gateway",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "100.52.22.97/32"
                ],
                "description": "Prometheus UI from QA Gateway",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "3.220.53.59/32",
                  "54.86.159.130/32"
                ],
                "description": "Redis Access from Trusted App Nodes",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "dermatech-infra-state-sg",
            "name_prefix": "",
            "owner_id": "957842195675",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dermatech-infra-state-sg"
            },
            "tags_all": {
              "Name": "dermatech-infra-state-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da280bc5b4bca2ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "957842195675",
            "id": "sg-05bc2763c892979c0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957842195675:internet-gateway/igw-03d10ad0976578288",
            "id": "igw-03d10ad0976578288",
            "owner_id": "957842195675",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-infra-state-igw"
            },
            "tags_all": {
              "Name": "dermatech-infra-state-igw"
            },
            "vpc_id": "vpc-0da280bc5b4bca2ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957842195675:route-table/rtb-0e7b01a90796c637d",
            "id": "rtb-0e7b01a90796c637d",
            "owner_id": "957842195675",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d10ad0976578288",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dermatech-infra-state-public-rt"
            },
            "tags_all": {
              "Name": "dermatech-infra-state-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da280bc5b4bca2ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "957842195675",
            "id": "rtb-0e7b01a90796c637d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a91f4f08836d11a7",
            "region": "us-east-1",
            "route_table_id": "rtb-0e7b01a90796c637d",
            "subnet_id": "subnet-03a89fe56aa0e961c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957842195675:subnet/subnet-03a89fe56aa0e961c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a89fe56aa0e961c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957842195675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-infra-state-public-subnet"
            },
            "tags_all": {
              "Name": "dermatech-infra-state-public-subnet"
            },
            "vpc_id": "vpc-0da280bc5b4bca2ec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "957842195675",
            "id": "subnet-03a89fe56aa0e961c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957842195675:vpc/vpc-0da280bc5b4bca2ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09250cee0f7d5271a",
            "default_route_table_id": "rtb-0e0dd0e01bf9cf9cf",
            "default_security_group_id": "sg-0bdd6ac1421f37142",
            "dhcp_options_id": "dopt-f6454e8d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da280bc5b4bca2ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e0dd0e01bf9cf9cf",
            "owner_id": "957842195675",
            "region": "us-east-1",
            "tags": {
              "Environment": "infra-state",
              "Name": "dermatech-infra-state-vpc"
            },
            "tags_all": {
              "Environment": "infra-state",
              "Name": "dermatech-infra-state-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "957842195675",
            "id": "vpc-0da280bc5b4bca2ec",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}